--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,9 +34,10 @@
       </div>
 
     </main>
+    <footer><a href="http://www.miitbeian.gov.cn/">yujingyang.top 版权所有 粤ICP备17108699号</a></footer>
   </section>
 
   <script src="/js/main.js"></script>
 </body>
 
-</html>
+</html> 
