--- a/views/postings.ejs
+++ b/views/postings.ejs
@@ -34,7 +34,7 @@
       </div>
 
     </main>
-    <footer><a href="http://www.miitbeian.gov.cn/">yujingyang.top 版权所有 粤ICP备17108699号</a></footer>
+    <footer><a href="http://www.miitbeian.gov.cn/">粤ICP备17108699号</a></footer>
   </section>
 
   <script src="/js/main.js"></script>
